--- a/deployment/templates/CameraAttendance.html
+++ b/deployment/templates/CameraAttendance.html
@@ -4,15 +4,16 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8  offset-lg-2">
-            <h3 class="mt-5">Camera</h3>
-            <form method="POST">
-                <input type="submit" value="Capture" name="capture" />
-            </form>
-            <section class="videos">
+            <div class="upload">
+                <h3 class="font">CAMERA ATTENDANCE</h3>
+            </div>
+            <section class="videos" style="margin-left: 100px;">
                 <iframe width="650" height="550" src="{{ url_for('capture_feed') }}" frameborder="0" allowfullscreen>
                 </iframe>
             </section>
-
+            <form method="POST" style="margin: auto; width: 220px;">
+                <input class=" btn btn-primary btn-lg subbutton" type="submit" value="Capture" name="capture" />
+            </form>
         </div>
     </div>
 </div>
