--- a/deployment/templates/takeattendance.html
+++ b/deployment/templates/takeattendance.html
@@ -18,7 +18,11 @@
     <h3 class="font">TAKE ATTENDANCE</h3>
   </div>
   <div class="upload">
-    <p>Please upload photo for the attendance details.</p>
+    <p>Please upload photo for the attendance details.<br></p>
+  </div>
+  <div class="upload">
+    <i>* Press Submit button only if you are redirected from
+      camera</i>
   </div>
   <div class="upload">
     <form method="POST" enctype="multipart/form-data">
